# example-switchbot

./: README.md  main.py  pyproject.toml
credentials/: .gitignore  example-tokens.json
